--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Module 2 Assignment</title>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+<body>
+	<h1>Lorem Ipsum</h1>
+	
+	<p class="row">
+		<div class="col-dk col-tb-up">
+		<div class="content">
+			<h2 class="title" id="t1">Lorem 1</h2>
+			<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, odit, ipsa, esse vel sint earum dolorem ducimus impedit autem vitae totam ipsum eligendi maxime amet nesciunt doloribus at eveniet. Architecto.</p>
+		</div>
+		</div>
+		<div class="col-dk col-tb-up">
+		<div class="content">
+			<h2 class="title"  id="t2">Lorem 2</h2>
+			<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, aspernatur, iure explicabo blanditiis necessitatibus natus eos quidem veniam beatae corrupti impedit nemo odio maiores expedita id inventore autem iusto minus.</p>
+		</div>
+		</div>
+		<div class="col-dk col-tb-bt">
+		<div class="content">
+			<h2 class="title"  id="t3">Lorem 3</h2><p class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, doloribus, iste, perspiciatis libero et itaque ducimus minima possimus quam incidunt quos culpa provident maiores aspernatur enim reiciendis distinctio ea voluptate.</p>
+		</div>
+		</div>
+	</p>
+</body>
+</html>
